--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,10 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<body>
+  <h1>
+    welcome to Bookers！
+  </h1>
+  <p>bookers では、さまざまな書籍に関するあなたの意見や</p>
+  <p>印象を共有し交換することを目的にしています！</p>
+  <p>
+    <a href="/books">start</a>
+  </p>
+</body>
