--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<body>
+  <h1>Books</h1>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>body</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tb></tb>
+    </tbody>
+  </table>
+
+  <h2>New book</h2>
+  <%= form_with model: @book do |f| %>
+  <!--"アプリケーションを完成させよう2章の最後の書き方が良いかも？"-->
+  <p>Title</p>
+  <%= f.text_field :title %>
+  <p>Body</p>
+  <%= f.text_area :body %>
+  <%= f.submit 'Create Book' %>
+  <% end %>
+  </form>
+</body>
