--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,20 +2,30 @@
   <h1>Books</h1>
 
   <table>
+    
     <thead>
       <tr>
         <th>Title</th>
         <th>body</th>
-        <th colspan="3"></th>
+        <th></th>
       </tr>
     </thead>
+    
     <tbody>
-      <tb></tb>
+      <% @books.each do |book| %>
+      <tr>
+        <td><%= book.title %><td>
+        <td><%= book.body %><td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
     </tbody>
+    
   </table>
 
   <h2>New book</h2>
-  <%= form_with model: @book do |f| %>
+  <%= form_with model: @books do |f| %>
   <!--"アプリケーションを完成させよう2章の最後の書き方が良いかも？"-->
   <p>Title</p>
   <%= f.text_field :title %>
