--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,5 @@
 <body>
+  
   <h1>Books</h1>
 
   <table>
@@ -14,11 +15,12 @@
     <tbody>
       <% @books.each do |book| %>
       <tr>
-        <td><%= book.title %><td>
-        <td><%= book.body %><td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td><%= book.title, book_path(book.id) %><td>
+        <td><%= book.body, book_path(book.id) %><td>
+        <td><%= link_to Show, "/#{book.id}"%></td>
+        <td><%= link_to Edit, "/#{book.id}"%></td>
+        <td><%= link_to Destroy, "/#{book.id}"%></td>
+        <!-- リンク先は要確認　-->
       </tr>
     </tbody>
     
@@ -34,4 +36,5 @@
   <%= f.submit 'Create Book' %>
   <% end %>
   </form>
+  
 </body>
