--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,18 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<h1>Editing Book</h1>
+
+<%= form_with model: @book do |f| %>
+
+<p>Title</p>
+<%= f.text_find :title %>
+
+<p>Body</p>
+<%= f.text_area :body %>
+
+<%= f.submit 'Update Book' %>
+
+<a class="Show" href="/books/#{book.id"}>Show</a>
+　　　　　　　　<!-- リンク先は要調整? -->
+"|"
+<a class="back" href="/books">Back</a>
+
+<% end %>
