--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,9 @@
 <body>
   
+  <p class="flash">
+  <%= flash[:notice]%>
+  </p>
+  
   <h1>Books</h1>
 
   <table>
@@ -17,14 +21,23 @@
       <tr>
         <td><%= book.title, book_path(book.id) %><td>
         <td><%= book.body, book_path(book.id) %><td>
-        <td><%= link_to Show, "/#{book.id}"%></td>
-        <td><%= link_to Edit, "/#{book.id}"%></td>
-        <td><%= link_to Destroy, "/#{book.id}"%></td>
+        <td><%= link_to "Show", show_book_path(@book.id) %></td>
+        <td><%= link_to "Edit", edit_book_path(@book.id) %></td>
+        <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => 'Are you sure?' %></td>
         <!-- リンク先は要確認　-->
       </tr>
     </tbody>
     
   </table>
+  
+  <% if @book.errors.any? %>
+  <%= @book.errors.count %> errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+  <% end %>
 
   <h2>New book</h2>
   <%= form_with model: @books do |f| %>
