--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,53 +1,46 @@
-<body>
-  
-  <p class="flash">
-  <%= flash[:notice]%>
-  </p>
-  
-  <h1>Books</h1>
+<p class="flash">
+<%= flash[:notice]%>
+</p>
 
-  <table>
-    
-    <thead>
-      <tr>
-        <th>Title</th>
-        <th>body</th>
-        <th></th>
-      </tr>
-    </thead>
-    
-    <tbody>
-      <% @books.each do |book| %>
-      <tr>
-        <td><%= book.title, book_path(book.id) %><td>
-        <td><%= book.body, book_path(book.id) %><td>
-        <td><%= link_to "Show", show_book_path(@book.id) %></td>
-        <td><%= link_to "Edit", edit_book_path(@book.id) %></td>
-        <td><%= link_to "Destroy", book_path(@book.id), method: :delete, "data-confirm" => 'Are you sure?' %></td>
-        <!-- リンク先は要確認　-->
-      </tr>
-    </tbody>
-    
-  </table>
-  
-  <% if @book.errors.any? %>
-  <%= @book.errors.count %> errors prohibited this book from being saved:
-  <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
+<h1>Books</h1>
+
+<table>
+  <thead>
+    <tr>
+      <th>Title</th>
+      <th>body</th>
+      <th></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @books.each do |book| %>
+    <tr>
+      <td><%= link_to book.title, book_path(book.id) %><td>
+      <td><%= link_to book.body, book_path(book.id) %><td>
+      <td><%= link_to "Show", show_book_path(book.id) %></td>
+      <td><%= link_to "Edit", edit_book_path(book.id) %></td>
+      <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => 'Are you sure?' %></td>
+    </tr>
     <% end %>
-  </ul>
-  <% end %>
+  </tbody>
+</table>
 
-  <h2>New book</h2>
-  <%= form_with model: @books do |f| %>
-  <!--"アプリケーションを完成させよう2章の最後の書き方が良いかも？"-->
-  <p>Title</p>
-  <%= f.text_field :title %>
-  <p>Body</p>
-  <%= f.text_area :body %>
-  <%= f.submit 'Create Book' %>
+<% if @book.errors.any? %>
+<%= @book.errors.count %> errors prohibited this book from being saved:
+<ul>
+  <% @book.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
   <% end %>
-  </form>
-  
-</body>
+</ul>
+<% end %>
+
+<h2>New book</h2>
+<%= form_with model: @books do |f| %>
+<!--"アプリケーションを完成させよう2章の最後の書き方が良いかも？"-->
+<p>Title</p>
+<%= f.text_field :title %>
+<p>Body</p>
+<%= f.text_area :body %>
+<%= f.submit 'Create Book' %>
+<% end %>
