--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -9,19 +9,19 @@
   </ul>
 <% end %>
 
-<%= form_with model: @book do |f| %>
+<%= form_with model:@book, local:true do |f| %>
 
-<p>Title</p>
-<%= f.text_find :title %>
 
-<p>Body</p>
-<%= f.text_area :body %>
+ <div>Title</div>
+ <%= f.text_field :title %>
+ 
+ <div>Body</div>
+ <%= f.text_area :body %>
 
-<%= f.submit 'Update Book' %>
+ <div><%= f.submit 'Update Book' %></div>
+<% end %>
 
 <a class="Show" href="/books/#{book.id"}>Show</a>
-　　　　　　　　<!-- リンク先は要調整? -->
 "|"
 <a class="back" href="/books">Back</a>
 
-<% end %>
