--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -16,9 +16,9 @@
   <tbody>
     <% @books.each do |book| %>
     <tr>
-      <td><%= link_to book.title, book_path(book.id) %><td>
-      <td><%= link_to book.body, book_path(book.id) %><td>
-      <td><%= link_to "Show", show_book_path(book.id) %></td>
+      <td><%= book.title %><td>
+      <td><%= book.body %><td>
+      <td><%= link_to "Show", book_path(book.id) %></td>
       <td><%= link_to "Edit", edit_book_path(book.id) %></td>
       <td><%= link_to "Destroy", book_path(book.id), method: :delete, "data-confirm" => 'Are you sure?' %></td>
     </tr>
@@ -36,11 +36,16 @@
 <% end %>
 
 <h2>New book</h2>
-<%= form_with model: @books do |f| %>
-<!--"アプリケーションを完成させよう2章の最後の書き方が良いかも？"-->
-<p>Title</p>
-<%= f.text_field :title %>
-<p>Body</p>
-<%= f.text_area :body %>
+<%= form_with model: @book do |f| %>
+
+<div>
+  <div>Title</div>
+  <%= f.text_field :title %>
+</div>
+<div>
+  <div>Body</div>
+  <%= f.text_area :body %>
+</div>
+
 <%= f.submit 'Create Book' %>
 <% end %>
