--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -21,7 +21,7 @@
  <div><%= f.submit 'Update Book' %></div>
 <% end %>
 
-<a class="Show" href="/books/#{book.id"}>Show</a>
-"|"
+<a class="Show"><%= link_to "Show", book_path(@book.id) %></a>
+|
 <a class="back" href="/books">Back</a>
 
