--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,9 +3,9 @@
 </p>
 
 <% if @book.errors.any? %>
-  <%= @lbook.errors.count %> errors prohibited this book from being saved:
+  <%= @book.errors.count %> errors prohibited this book from being saved:
   <ul>
-    <% @list.errors.full_messages.each do |message| %>
+    <% @Book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
     <% end %>
   </ul>
