[add]top画面を表示できるようにパス設定。showとindexのhtmlを調整

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,6 +8,7 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th></th>
       <th>body</th>
       <th></th>
     </tr>
@@ -26,14 +27,16 @@
   </tbody>
 </table>
 
-<% if @book.errors.any? %>
-<%= @book.errors.count %> errors prohibited this book from being saved:
-<ul>
-  <% @book.errors.full_messages.each do |message| %>
-    <li><%= message %></li>
+<div class="errors">
+  <% if @book.errors.any? %>
+  <%= @book.errors.count %> errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
   <% end %>
-</ul>
-<% end %>
+</div>
 
 <h2>New book</h2>
 <%= form_with model: @book do |f| %>
