--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,14 +2,16 @@
   <%= flash[:notice]%>
 </p>
 
-<% if @book.errors.any? %>
-  <%= @book.errors.count %> errors prohibited this book from being saved:
-  <ul>
-    <% @Book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-  </ul>
-<% end %>
+<div class="errors">
+  <% if @book.errors.any? %>
+    <%= @book.errors.count %> errors prohibited this book from being saved:
+    <ul>
+      <% @Book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+</div
 
 <p>Title:  <%= @book.title %></p>
 
