--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,21 +30,28 @@ body {
 
 h1 {
     font-family: verdana, arial, helvetica, sans-serif;
+    margin-bottom: 15px;
 }
 
-p {
+h2 {
+  margin: 10px 0;
+}
+
+p, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
   margin: 33px;
 }
 
-thead {
-  width: 90%;
+strong {
+  font-weight: bold;
 }
 
+td {
+  padding: 0 5px 7px 5px;
+}
 
-
-table {
-  width: 90%;
+.create, .update{
+  margin-top: 8px;
 }
