--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,27 +1,29 @@
 <h1>Editing Book</h1>
 
 <% if @book.errors.any? %>
- <%= @book.errors.count %> errors prohibited this book from being saved:
+  <%= @book.errors.count %> errors prohibited this book from being saved:
   <ul>
-  <% @book.errors.full_messages.each do |message| %>
+    <% @book.errors.full_messages.each do |message| %>
     <li><%= message %></li>
-  <% end %>
+    <% end %>
   </ul>
 <% end %>
 
 <%= form_with model:@book, local:true do |f| %>
 
-
- <div>Title</div>
- <%= f.text_field :title %>
+<div>
+  <div class="update">Title</div>
+  <%= f.text_field :title %>
  
- <div>Body</div>
- <%= f.text_area :body %>
+  <div class="update">Body</div>
+  <%= f.text_area :body %>
 
- <div><%= f.submit 'Update Book' %></div>
-<% end %>
+  <div class="update"><%= f.submit 'Update Book' %></div>
+  </div>
+ <% end %>
 
-<a class="Show"><%= link_to "Show", book_path(@book.id) %></a>
+<div class="update">
+<%= link_to "Show", book_path(@book.id) %>
 |
-<a class="back" href="/books">Back</a>
-
+<%= link_to "Back", '/books' %>
+</div>
