--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -41,14 +41,14 @@
 <h2>New book</h2>
 <%= form_with model: @book do |f| %>
 
-<div>
+<div class="create">
   <div>Title</div>
   <%= f.text_field :title %>
 </div>
-<div>
+<div class="create">
   <div>Body</div>
   <%= f.text_area :body %>
 </div>
+<div class="create"><%= f.submit 'Create Book' %></div>
 
-<%= f.submit 'Create Book' %>
 <% end %>
