--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -2,7 +2,7 @@
   <h1>
     welcome to Bookers！
   </h1>
-  <p>bookers では、さまざまな書籍に関するあなたの意見や</p>
+  <p><strong>Bookers</strong> では、さまざまな書籍に関するあなたの意見や</p>
   <p>印象を共有し交換することを目的にしています！</p>
   <p>
     <a href="/books">start</a>
